--- a/lab1/index_location.html
+++ b/lab1/index_location.html
@@ -15,7 +15,7 @@
       
       This site is working and i have no idea why
     
-  </div>
+    </div>
 </header>
 
   <article class="Article">Our location</article>
@@ -35,7 +35,16 @@
 
   </div>
 
-  <div class="Subarticle">Subtitle</div>
+  <div class="Subarticle">
+    <iframe 
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28582.462724682802!2d24.695110775552898!3d42.07988801497298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14acc4d0be9de7a5%3A0x6837a6d7ef48603a!2z0J_QsNGA0Log0Lgg0KHQn9CQINCl0L7RgtC10Lsg0JzQsNGA0LrQvtCy0L4!5e0!3m2!1sru!2sua!4v1630831631699!5m2!1sru!2sua" 
+      width="800" 
+      height="600" 
+      style="border:0;" 
+      allowfullscreen="" 
+      loading="lazy">
+    </iframe>  
+  </div>
   
   <div class="date">
     This site was published 04.09.2021
