--- a/lab1/index.html
+++ b/lab1/index.html
@@ -22,7 +22,7 @@
 
   <nav class="menu">
     <ul class ="menu__list">
-      <li><a href="index_home.html" class="menu__item menu__item_active">HOME</a></li>
+      <li><a href="index.html" class="menu__item menu__item_active">HOME</a></li>
       <li><a href="./pages/index_about.html" class="menu__item">ABOUT US</a></li>
       <li><a href="./pages/index_portfolio.html" class="menu__item">PORTFOLIO</a></li>
       <li><a href="./pages/index_contact.html" class="menu__item">CONTACT</a></li>
