--- a/lab2/Untitled-1 — копия.html
+++ b/lab2/Untitled-1 — копия.html
@@ -34,7 +34,7 @@
  <div id="aside">
  <form action="">
  <input type="hidden" id="reg" text="0">
-   <p><input type="button" value="Проверить" onclick="but()"></p>
+   <p><input type="button" value="x" onclick="but()"></p>
   </form>
   </div>
  <div id="content">Центральная колонка</div>
