--- a/lab2/pages/index_about.html
+++ b/lab2/pages/index_about.html
@@ -37,7 +37,7 @@
   </nav>
 
   <div class="logo">
-    <img src="../img/About us.png" alt="About">
+    <img src="../img/About_us.png" alt="About">
   </div>
 
   <div class="Subarticle", id="Subarticle">
