--- a/lab2/pages/index_portfolio.html
+++ b/lab2/pages/index_portfolio.html
@@ -9,6 +9,7 @@
 </head>
 <script>
    window.onload = function() {
+    document.cookie = "number=0;max-age=0";
 if(document.cookie !== "" && confirm("Cookies: " + document.cookie + ". Want to save cookies?"))
 {
     document.getElementById("getDividersForm").setAttribute("class", "hidden");
