--- a/lab2/pages/index_portfolio.html
+++ b/lab2/pages/index_portfolio.html
@@ -9,7 +9,10 @@
 </head>
 <script>
    window.onload = function() {
-    document.cookie = "number=0;max-age=0";
+    var cookies = document.cookie.split(";");
+for (var i = 0; i < cookies.length; i++)
+  eraseCookie(cookies[i].split("=")[0]);
+    
 if(document.cookie !== "" && confirm("Cookies: " + document.cookie + ". Want to save cookies?"))
 {
     document.getElementById("getDividersForm").setAttribute("class", "hidden");
