--- a/lab2/pages/index_portfolio.html
+++ b/lab2/pages/index_portfolio.html
@@ -12,7 +12,7 @@
 
 if(document.cookie !== "" && confirm("Cookies: " + document.cookie + ". Want to save cookies?"))
 {
-    document.getElementById("getDividersForm").setAttribute("class", "hidden");
+    document.getElementById("getDividersForm").display = 'none';
 }
 else
 {
