--- a/lab2/pages/index_portfolio.html
+++ b/lab2/pages/index_portfolio.html
@@ -9,7 +9,7 @@
 </head>
 <script>
    window.onload = function() {
-    x = confirm( confirm("Cookies: " + document.cookie + ". Want to save cookies?"));
+    x = confirm("Cookies: " + document.cookie + ". Want to save cookies?");
 if(document.cookie != "" && x ==true)
 {
     document.getElementById("getDividersForm").style.visibility = "hidden";
